--- a/.env.example
+++ b/.env.example
@@ -10,10 +10,10 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
 DB_HOST=pgsql
-DB_PORT=3306
-DB_DATABASE=example_app
+DB_PORT=5432
+DB_DATABASE=postgres
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=postgres
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
